added some link of recipe

--- a/task2.html
+++ b/task2.html
@@ -11,5 +11,14 @@
     <img src="https://img.freepik.com/free-photo/flat-lay-food-bowl-with-sticks_23-2148771255.jpg?t=st=1714977571~exp=1714981171~hmac=a63d1ecfd1e8d3ebff44c10324813301205940f2f167f494b3e5a1ca7c42aab5&w=740" alt="A full plate of noodles with chopstick on it" />
 
     <p>🍝</p>
+
+    <h1>Here are the other five recipe to make noodles from web</h1>
+    <ul>
+        <li><a href="https://www.thespruceeats.com/homemade-egg-noodles-2215807">homemade-noodles</a></li>
+        <li><a href="https://www.indianhealthyrecipes.com/veg-noodles-recipe/">veg-noodles-recipe</a></li>
+        <li><a href="https://thewoksoflife.com/chinese-handmade-noodles/">CHINESE HANDMADE NOODLES</a></li>
+        <li><a href="https://recipes.timesofindia.com/recipes/egg-noodles/rs52467119.cms">Egg Noodles Recipe</a></li>
+        <li><a href="https://www.chinasichuanfood.com/homemade-noodles/">Basic Chinese style homemade </a></li>
+    </ul>
 </body>
 </html>
